
PIG-4570: Allow AvroStorage to use a class for the schema (pmazak via daijy)

PIG-4405: Adding 'map[]' support to mock/Storage (nielsbasjes via daijy)

PIG-4638: Allow TOMAP to accept dynamically sized input (nielsbasjes via daijy)

PIG-4639: Add better parser for Apache HTTPD access log (nielsbasjes via daijy)

BUG FIXES

PIG-4696: Empty map returned by a streaming_python udf wrongly contains a null key (cheolsoo)

PIG-4691: [Pig on Tez] Support for whitelisting storefuncs for union optimization (rohini)

PIG-3957: Refactor out resetting input key in TezDagBuilder (rohini)

PIG-4688: Limit followed by POPartialAgg can give empty or partial results in Tez (rohini)

PIG-4635: NPE while running pig script in tez mode (daijy)

PIG-4683: Nested order is broken after PIG-3591 in some cases (daijy)

PIG-4679: Performance degradation due to InputSizeReducerEstimator since PIG-3754 (daijy)

PIG-4315: MergeJoin or Split followed by order by gives NPE in Tez (rohini)

PIG-4654: Reduce tez memory.reserve-fraction and clear spillables for better memory utilization (rohini)

PIG-4628: Pig 0.14 job with order by fails in mapreduce mode with Oozie (knoguchi)

PIG-4651: Optimize NullablePartitionWritable serialization for skewed join (rohini)

PIG-4627: [Pig on Tez] Self join does not handle null values correctly (rohini)

PIG-4644: PORelationToExprProject.clone() is broken (erwaman via rohini)

PIG-4650: ant mvn-deploy target is broken (daijy)

PIG-4649: [Pig on Tez] Union followed by HCatStorer misses some data (rohini)

PIG-4636: Occurred spelled incorrectly in error message for Launcher and POMergeCogroup (stevenmz via daijy)

PIG-4624: Error on ORC empty file without schema (daijy)

PIG-3622: Allow casting bytearray fields to bytearray type (redisliu via daijy)

PIG-4618: When use tez as the engine , set pig.user.cache.enabled=true do not take effect (wisgood via rohini)

PIG-4533: Document error: Pig does support concatenated gz file (xhudik via daijy)
