@@ -55,6 +55,8 @@ PIG-4639: Add better parser for Apache HTTPD access log (nielsbasjes via daijy)
 
 BUG FIXES
 
+PIG-4703: TezOperator.stores shall not ship to backend (daijy)
+
 PIG-4696: Empty map returned by a streaming_python udf wrongly contains a null key (cheolsoo)
 
 PIG-4691: [Pig on Tez] Support for whitelisting storefuncs for union optimization (rohini)
